--- a/tokyo-olympic-notebook.ipynb
+++ b/tokyo-olympic-notebook.ipynb
@@ -42,9 +42,9 @@
    "source": [
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"17fcd1bc-b58c-42e3-894c-e377f8c918d7\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": 'Ban8Q~8Kn9tF0tO1cSe_4IeVDYZoFiZ7Ztyyvb65',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/52b486cc-e312-48c5-99b1-2800603f9a76/oauth2/token\"}"
+    "\"fs.azure.account.oauth2.client.id\": \"",\n",
+    "\"fs.azure.account.oauth2.client.secret\": '',\n",
+    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/tenant-id/oauth2/token\"}"
    ]
   },
   {
