--- a/tokyo-olympic-notebook.ipynb
+++ b/tokyo-olympic-notebook.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"",\n",
+    "\"fs.azure.account.oauth2.client.id\": \"\",\n",
     "\"fs.azure.account.oauth2.client.secret\": '',\n",
     "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/tenant-id/oauth2/token\"}"
    ]
